# aiola-python-sdk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  README_UPDATE.md  build_and_play.sh  build_dev.sh  build_examples.sh  pyproject.toml  run_tests.sh  setup.py
.github/workflows/: cd.yml  ci.yml
aiola/: __init__.py  client.py  constants.py  mic.py  types.py
aiola/clients/auth/: client.py
aiola/clients/stt/: __init__.py  client.py  stream_client.py  types.py
aiola_streaming_sdk/: __init__.py  auth.py  client.py  config.py  exceptions.py
aiola_streaming_sdk/models/: __init__.py  audio.py  auth.py  callbacks.py  config.py  errors.py  stats.py
aiola_streaming_sdk/services/: __init__.py  auth.py
aiola_tts_sdk/: __init__.py  audio_converter.py  client.py
examples/: buildin_mic_streaming.py  external_mic_streaming.py  grant_token.py
examples/1_transcript_events_example/: README.md  buildin_mic_streaming.py  external_mic_streaming.py
examples/2_keywords_spotting_example/: README.md  external_mic_streaming.py
examples/3_synthesizeSpeech_example/: README.md  demo.py
examples/4_streamSpeech_example/: README.md  demo.py
examples/auth/: grant_token.py
examples/stt/: README.md  aiola_asr_test.py  async_transcribe_file.py  custom_audio_stream.py  deafult_audio_stream_lazy_record.py  default_audio_stream_auto_record.py  default_audio_stream_lazy_record.py  file_transcription_example.py  file_transcription_example_multi.py  list.csv  mic_stream.py  mic_stream_custom.py  pyproject.toml  transcribe_file.py
examples/tts/: README.md  async_tts.py  pyproject.toml  synthesize.py  synthesize_stream.py  tts_file.py  tts_stream.py
libs/speech_to_text/aiola_stt/: README.md  client.py  snippet.md
libs/speech_to_text/tests/: conftest.py  test_connection.py  test_downsampling.py  test_events.py  test_import_client.py  test_keywords.py  test_transcription.py
libs/text_to_speech/aiola_tts/: README.md  snippet.md
libs/text_to_speech/tests/: __init__.py  common.py  test_client.py  test_synthesize.py  test_synthesize_stream.py
recorder_app/: __init__.py  exceptions.py
scripts/: build_dev.sh  build_examples.sh  run_cov.sh  run_tests.sh
tests/: _helpers.py  conftest.py
tests/unit/: test_aiola_client.py  test_auth_client.py
(+2 files in other folders)
