[project]
name = "aiola-stt-examples"
version = "0.1.0"
description = "Example application for aiOla stt SDK"
requires-python = ">=3.8"
dependencies = [
    "colorlog>=6.9.0",
    "numpy>=1.24.0",
    "aiola-stt==0.1.4"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["deafult_audio_stream_auto_record", "deafult_audio_stream_lazy_record", "custom_audio_stream", "deafult_audio_stream2"] 